--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.5",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
