--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,7 +17,8 @@
     "react-scroll": "^1.8.9",
     "styled-components": "^5.3.5",
     "swiper": "^8.4.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
