--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,9 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14 <18"
+  },
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
